--- a/pages/encontranos.html
+++ b/pages/encontranos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="../styles/styles.css">
 
     <!--Link a fuente Poppins Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,17 +19,17 @@
     <!-- Encabezado de la página -->
     <header>
         <div>
-            <img class="foto-logo" src="/assets/logo-arcano.webp" alt="logo"> 
+            <img class="foto-logo" src="../assets/logo-arcano.webp" alt="logo"> 
             <h1 class="titulo">Arcano</h1>
             <p class="subtitulo">Pizzería</p>
         </div>
         <nav>
             <div class="navbar">
                 <a href="#">Inicio</a>
-                <a href="/pages/productos.html">Productos</a>
-                <a href="/pages/nosotros.html">Nosotros</a>
-                <a href="/pages/encontranos.html">Encontranos</a>
-                <a href="/pages/preguntas-frecuentes.html">Preguntas Frecuentes</a>
+                <a href="../pages/productos.html">Productos</a>
+                <a href="../pages/nosotros.html">Nosotros</a>
+                <a href="../pages/encontranos.html">Encontranos</a>
+                <a href="../pages/preguntas-frecuentes.html">Preguntas Frecuentes</a>
             </div>
             <div class="redes">
                 <a href="https://www.instagram.com">Instagram</a>
@@ -44,7 +44,7 @@
         <!-- Sección de imagen principal -->
         <section>
             <div class="centrar-imagen">
-                <img src="/assets/pizza.jpg" alt="Imagen principal"> 
+                <img src="../assets/pizza.jpg" alt="Imagen principal"> 
             </div>
         </section>
 
@@ -52,7 +52,7 @@
         <section>
             <h2 class="titulo-reseñas">Ubicación</h2>
             <div class="centrar-imagen">
-                <img src="/assets/mapa.jpg" alt="Mapa">
+                <img src="../assets/mapa.jpg" alt="Mapa">
             </div>
         </section>
     </main>
