--- a/pages/productos.html
+++ b/pages/productos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="../styles/styles.css">
 
     <!--Link a fuente Poppins Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,17 +19,17 @@
     <!-- Encabezado de la página -->
     <header>
         <div>
-            <img class="foto-logo" src="/assets/logo-arcano.webp" alt="logo"> 
+            <img class="foto-logo" src="../assets/logo-arcano.webp" alt="logo"> 
             <h1 class="titulo">Arcano</h1>
             <p class="subtitulo">Pizzería</p>
         </div>
         <nav>
             <div class="navbar">
                 <a href="../index.html">Inicio</a>
-                <a href="/pages/productos.html">Productos</a>
-                <a href="/pages/nosotros.html">Nosotros</a>
-                <a href="/pages/encontranos.html">Encontranos</a>
-                <a href="/pages/preguntas-frecuentes.html">Preguntas Frecuentes</a>
+                <a href="../pages/productos.html">Productos</a>
+                <a href="../pages/nosotros.html">Nosotros</a>
+                <a href="../pages/encontranos.html">Encontranos</a>
+                <a href="../pages/preguntas-frecuentes.html">Preguntas Frecuentes</a>
             </div>
             <div class="redes">
                 <a href="https://www.instagram.com">Instagram</a>
@@ -46,15 +46,15 @@
             <h2 class="titulo-reseñas">Pizzas</h2>
              <div class="centrar-imagen">
                 <div>
-                    <img class="ofertas" src="/assets/pizza.jpg" alt="Oferta 1"> 
+                    <img class="ofertas" src="../assets/pizza.jpg" alt="Oferta 1"> 
                     <p>Muzza</p>
                 </div>
                 <div>
-                    <img class="ofertas" src="/assets/pizza.jpg" alt="Oferta 2"> 
+                    <img class="ofertas" src="../assets/pizza.jpg" alt="Oferta 2"> 
                     <p>Salame</p>
                 </div>
                 <div>
-                    <img class="ofertas" src="/assets/pizza.jpg" alt="Oferta 3"> 
+                    <img class="ofertas" src="../assets/pizza.jpg" alt="Oferta 3"> 
                     <p>Fugazeta</p>
                 </div>
               </div>
@@ -62,30 +62,30 @@
               <h2 class="titulo-reseñas">Empanadas</h2>
             <div class="centrar-imagen">
                 <div>
-                    <img class="ofertas" src="/assets/empanada.jpg" alt="Oferta 1"> 
+                    <img class="ofertas" src="../assets/empanada.jpg" alt="Oferta 1"> 
                     <p>JyQ</p>
                 </div>
                 <div>
-                    <img class="ofertas" src="/assets/empanada.jpg" alt="Oferta 2"> 
+                    <img class="ofertas" src="../assets/empanada.jpg" alt="Oferta 2"> 
                     <p>Carne</p>
                 </div>
                 <div>
-                    <img class="ofertas" src="/assets/empanada.jpg" alt="Oferta 3"> 
+                    <img class="ofertas" src="../assets/empanada.jpg" alt="Oferta 3"> 
                     <p>Pollo</p>
                 </div>
 
                 <h2 class="titulo-reseñas">Combos</h2>
                 <div class="centrar-imagen">
                     <div>
-                        <img class="ofertas" src="/assets/empanada.jpg" alt="Oferta 1"> 
+                        <img class="ofertas" src="../assets/empanada.jpg" alt="Oferta 1"> 
                         <p>2 docenas de empanadas</p>
                     </div>
                     <div>
-                        <img class="ofertas" src="/assets/pizza.jpg" alt="Oferta 2"> 
+                        <img class="ofertas" src="../assets/pizza.jpg" alt="Oferta 2"> 
                         <p>2 pizzas de muzza</p>
                     </div>
                     <div>
-                        <img class="ofertas" src="/assets/empanada.jpg" alt="Oferta 3"> 
+                        <img class="ofertas" src="../assets/empanada.jpg" alt="Oferta 3"> 
                         <p>media docena de empanadas y una pizza</p>
                     </div>
 
